<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_routes">

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.razvantmz.onemove.ui.routes.RoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" />

    <fragment
        android:id="@+id/navigation_ranks"
        android:label="@string/title_events"
        android:name="com.razvantmz.onemove.ui.ranks.RanksFragment"
        tools:layout="@layout/fragment_ranks" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.razvantmz.onemove.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
