<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signIn.SignInActivity"
    style="@style/SecondaryBackground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_activity_sign_in_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_activity_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_activity_sign_in_logo"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding">
            <com.razvantmz.onemove.core.customViews.EditTextValidation
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_activity_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_below="@+id/til_activity_sign_in_email">
            <com.razvantmz.onemove.core.customViews.EditTextValidation
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_below="@id/til_activity_sign_in_password"
            style="@style/PrimaryButton"
            android:text="@string/sign_in"
            />
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_distance"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_below="@id/signInButton"
            style="@style/SecondaryButton"
            android:text="@string/register"
            />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>