<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/om_black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/successContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/succedImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/animated_check" />
            <TextView
                android:id="@+id/confirmationTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ramabhadra_regular"
                android:text="@string/success_marked_as_sent"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/dialog_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="22dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="14sp"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/ramabhadra_regular"/>

            <ImageView
                android:id="@+id/clockIv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/title"
                android:tint="@color/om_image_resource"
                android:src="@drawable/ic_clock"/>
            <TextView
                android:id="@+id/dateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/clockIv"
                android:layout_below="@+id/title"
                android:paddingStart="12dp"
                android:focusable="true"
                android:clickable="true"
                tools:ignore="RtlSymmetry"/>
            <TextView
                android:id="@+id/howManyTriesTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/clockIv"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/ramabhadra_regular"
                android:text="@string/howManyAttempts"
                />
            <Spinner
                android:id="@+id/numberOfTriesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/howManyTriesTv"
                />
            <TextView
                android:id="@+id/whatGradeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numberOfTriesSpinner"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/ramabhadra_regular"
                android:text="@string/whatGrade"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gradeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/whatGradeTv"
                android:clipToPadding="false"/>
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gradeRecyclerView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="22dp"
                android:background="@color/transparent"
                android:textColor="@color/om_black"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gradeRecyclerView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="22dp"
                style="@style/PrimaryButton"
                android:text="@string/save"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>