<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    tools:context=".ui.addProblem.AddProblemActivity"
    android:orientation="vertical"
    android:focusableInTouchMode="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_with_back_button" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SecondaryBackground">
                <ImageView
                    android:id="@+id/addProblemImgBackground"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_a_photo"/>
                <ImageView
                    android:id="@+id/addProblemImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_padding"
                android:paddingVertical="6dp"
                android:background="@drawable/bottom_border">
                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrimaryHeader"
                    android:minWidth="120dp"
                    android:text="@string/name"/>
                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:fontFamily="@font/ramabhadra_regular"
                    android:background="@android:color/transparent"
                    android:textColor="@color/om_medium_gray"
                    android:hint="@string/name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_padding"
                android:paddingVertical="6dp"
                android:background="@drawable/bottom_border">
                <TextView
                    android:id="@+id/typeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrimaryHeader"
                    android:minWidth="120dp"
                    android:text="@string/routeType"/>
                <Spinner
                    android:id="@+id/typeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:overlapAnchor="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_padding"
                android:paddingVertical="6dp"
                android:background="@drawable/bottom_border">
                <TextView
                    android:id="@+id/setterTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrimaryHeader"
                    android:minWidth="120dp"
                    android:text="@string/setter"/>
                <Spinner
                    android:id="@+id/setterSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:overlapAnchor="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_padding"
                android:paddingVertical="6dp"
                android:background="@drawable/bottom_border">
                <TextView
                    android:id="@+id/locationTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrimaryHeader"
                    android:minWidth="120dp"
                    android:text="@string/location"/>
                <Spinner
                    android:id="@+id/locationSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:overlapAnchor="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_padding"
                android:paddingVertical="6dp"
                android:background="@drawable/bottom_border">
                <TextView
                    android:id="@+id/indexTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrimaryHeader"
                    android:minWidth="120dp"
                    android:text="@string/index"/>
                <EditText
                    android:id="@+id/indexEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:textColor="@color/om_medium_gray"
                    android:fontFamily="@font/ramabhadra_regular"
                    android:background="@android:color/transparent"
                    android:hint="@string/index"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_padding"
                android:paddingVertical="6dp"
                android:background="@drawable/bottom_border">
                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrimaryHeader"
                    android:minWidth="120dp"
                    android:text="@string/date"/>
                <TextView
                    android:id="@+id/dateValueTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:textSize="16sp"
                    android:fontFamily="@font/ramabhadra_regular"
                    android:background="@android:color/transparent"
                    android:textColor="@color/om_medium_gray"
                    android:hint="@string/date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="6dp"
                android:background="@drawable/bottom_border">
                <TextView
                    android:id="@+id/holdsColorTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/default_padding"
                    style="@style/PrimaryHeader"
                    android:minWidth="120dp"
                    android:text="@string/holdsColor"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/holdsColorRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="6dp"
                android:background="@drawable/bottom_border">
                <TextView
                    android:id="@+id/gradeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/default_padding"
                    style="@style/PrimaryHeader"
                    android:minWidth="120dp"
                    android:text="@string/grade"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gradeRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"/>
            </LinearLayout>
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_padding"
                android:layout_marginHorizontal="@dimen/default_padding"
                style="@style/PrimaryButton"
                android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>